# schiller_lab_tools

./: .gitignore  CHANGELOG.md  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
.github./workflows/: static.yml
.github/workflows/: docs.yml
checkpoint_restart/: lb3d_add_particles.ipynb  lb3d_change_particle_geometry.ipynb  lb3d_checkpoint_io.py  lb3d_concat_checkpoints.ipynb  lb3d_graft_particles.ipynb  lb3d_remove_particles.ipynb
docs/: conf.py  index.rst
docs/.github./: docs.yml
docs/api/: data.rst  io.rst  lb3d.rst  microstructure.rst  particle_properties.rst  visualization.rst
docs/examples/: (deprecated)lb3d_graft_particles.ipynb  (deprecated)lb3d_remove_particles.ipynb  GALLERY_HEADER.rst  plot_lb3d_add_particles.ipynb  plot_lb3d_add_particles.py  plot_lb3d_change_particle_geometry.ipynb  plot_lb3d_change_particle_geometry.py  plot_lb3d_concat_checkpoints.ipynb  plot_lb3d_concat_checkpoints.py  plot_structure_factor_1D.py  plot_structure_factor_projected.py
docs/source/: conf.py  index.rst  modules.rst  schiller_lab_tools.input_output.rst  schiller_lab_tools.microstructure.rst  schiller_lab_tools.particle.rst  schiller_lab_tools.rst
schiller_lab_tools/: LICENSE  __init__.py  convert.sh  lb3d.py  microstructure_analysis.py  particle_analysis.py  setup.py  visualization.py
schiller_lab_tools/input_output/: __init__.py  lb3d.ipynb  lb3d.py  visualization.ipynb  visualization.py
schiller_lab_tools/microstructure/: __init__.py  droplet_analysis.ipynb  droplet_analysis.py  (+2 more)
src/: __init__.py  convert.sh
tests/: context.py  testing.ipynb
(+31 files in other folders)
