[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schiller_lab_tools"
version = "0.1.0"
authors = [
  { name="Nikhil Karthikeyan", email="nkarthi@udel.edu" },
]
description = "Schiller group analysis tools"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/nkarthi95/schiller_lab_tools"
Issues = "https://github.com/nkarthi95/schiller_lab_tools/issues"